# ssmtp-mailer

./: .gitignore  API_IMPLEMENTATION_SUMMARY.md  CMakeLists.txt  LICENSE  Makefile  README.md  README_CENTOS_FEDORA_REPO.md  RELEASE_NOTES_v0.2.0.md  setup_smtp.sh  test_smtp_setup  test_smtp_setup.cpp
.github/workflows/: build-packages.yml  release.yml
cmake/: ssmtp-mailer-config.cmake.in
config/: api-config.conf.example  simple-smtp-mailer.conf.example  ssmtp-mailer.conf.example
config/conf.d/: 01-defaults.conf.example  10-domains.conf.example  20-users.conf.example  30-address-mapping.conf.example  50-logging.conf.example
config/domains/: domain1.com.conf.example  domain1.com.service-account.conf.example  dreamlikelabs.com.conf.example  example.com.conf.example  mailer.domain1.com.conf.example  mailer.dreamlikelabs.com.conf.example
config/mappings/: relay-mappings.conf.example
config/users/: mail-relay@domain1.com.conf.example  mail-relay@dreamlikelabs.com.conf.example  user@example.com.conf.example
docs/: CENTRALIZED_RELEASE_WORKFLOW.md  CLI_README.md  README.md  dns-setup.md  linux-build.md  macos-build.md  oauth2-setup-guide.md  relay-architecture.md  relay-setup-guide.md  service-account-setup-guide.md  ssl-setup-with-certbot.md
docs/api/: README.md  advanced_features.md  new_oauth2_integrations.md
docs/configuration/: dns-setup.md  relay-architecture.md  ssl-quick-reference.md
docs/development/: build-scripts.md  windows-build.md
docs/getting-started/: README.md  prerequisites.md  quick-start.md
docs/installation/: README.md  centos-fedora-repo-setup.md  linux.md  macos.md  windows.md
docs/oauth2/: README.md  gmail-oauth2-setup.md  oauth2-helper-tools.md  oauth2-overview.md  oauth2-security.md  oauth2-troubleshooting.md  office365-oauth2-setup.md  sendgrid-oauth2-setup.md  token-management.md
examples/: README.md  advanced_features_example.cpp  amazon_ses_example.cpp  api_example.cpp  mailgun_example.cpp  multi_provider_example.cpp
include/simple-smtp-mailer/: api_client.hpp  cli_commands.hpp  cli_manager.hpp  config_utils.hpp  http_client.hpp  mailer.hpp  platform.hpp  smtp_client.hpp  template_manager.hpp  unified_mailer.hpp  webhook_handler.hpp
include/ssmtp-mailer/: analytics.hpp  api_client.hpp  cli_commands.hpp  cli_manager.hpp  mailer.hpp  platform.hpp  queue_types.hpp  rate_limiter.hpp  smtp_client.hpp  template_manager.hpp  unified_mailer.hpp
scripts/: README.md  build-debian.sh  build-freebsd.sh  build-linux.sh  build-macos.sh  build-redhat.sh  build-windows.bat  build-windows.ps1  build.sh  centralized-release.sh  collect-packages.sh  oauth2-helper.js  release-manager.sh  setup-centos-fedora-repo.sh  setup-service-account.sh  upload-to-github.sh
scripts/installer/: build-pkg.sh  install-macos.sh
src/: email.cpp  mailer.cpp  main.cpp  platform.cpp
src/core/api/: amazon_ses_api_client.cpp  api_client_factory.cpp  fastmail_api_client.cpp  mailgun_api_client.cpp  protonmail_api_client.cpp  sendgrid_api_client.cpp  zoho_mail_api_client.cpp
src/core/auth/: service_account_auth.cpp  service_account_auth.hpp  service_account_auth_simple.cpp  service_account_auth_simple.hpp
src/core/cli/: auth_commands.cpp  cli_manager.cpp  config_commands.cpp  setup_wizard.cpp  template_commands.cpp  validation_commands.cpp
src/core/config/: config_manager.cpp  config_manager.hpp  config_utils.cpp
src/core/http/: http_client.cpp
src/core/logging/: logger.cpp  logger.hpp
src/core/queue/: email_queue.cpp  email_queue.hpp
src/core/smtp/: smtp_client.cpp  smtp_client.hpp
src/core/unified/: unified_mailer.cpp
src/tests/: CMakeLists.txt  test_all_providers.cpp  test_api_client.cpp  test_main.cpp
src/utils/: command_line.hpp  email.cpp  email.hpp
tools/oauth2-helper/: README.md  oauth2-helper.py  requirements.txt
tools/oauth2-helper/python/: amazon-ses-oauth2-helper.py  fastmail-oauth2-helper.py  gmail-oauth2-helper.py  mailgun-oauth2-helper.py  office365-oauth2-helper.py  protonmail-oauth2-helper.py  sendgrid-oauth2-helper.py  zoho-mail-oauth2-helper.py
tools/oauth2-helper/web/: gmail-oauth2-helper.html
